--- a/index.html
+++ b/index.html
@@ -147,6 +147,9 @@
       </p>
     </div>
 
+    <p>1. <a href="https://kushi1311.github.io/UI-UX/hello-world/">Hello world</a></p>
+    <p>2. <a href="https://kushi1311.github.io/UI-UX/assignment-one/">Assignment 1</a></p>
+
     
   </div>
 </body>
