--- a/index.html
+++ b/index.html
@@ -149,6 +149,9 @@
 
     <p>1. <a href="https://kushi1311.github.io/UI-UX/hello-world/">Hello world</a></p>
     <p>2. <a href="https://kushi1311.github.io/UI-UX/assignment-one/">Assignment 1</a></p>
+     <p>3. <a href="https://kushi1311.github.io/UI-UX/exercise-1/">Exercise 1</a></p>
+     <p>3. <a href="https://kushi1311.github.io/UI-UX/exercise-2/">Exercise 2</a></p>
+    
 
     
   </div>
