--- a/index.html
+++ b/index.html
@@ -151,6 +151,7 @@
     <p>2. <a href="https://kushi1311.github.io/UI-UX/assignment-one/">Assignment 1</a></p>
      <p>3. <a href="https://kushi1311.github.io/UI-UX/exercise-1/">Exercise 1</a></p>
      <p>3. <a href="https://kushi1311.github.io/UI-UX/exercise-2/">Exercise 2</a></p>
+    <p>4. <a href="https://kushi1311.github.io/UI-UX/exercise-3/">Exercise 3</a></p>
     
 
     
