--- a/index.html
+++ b/index.html
@@ -152,7 +152,8 @@
      <p>3. <a href="https://kushi1311.github.io/UI-UX/exercise-1/">Exercise 1</a></p>
      <p>3. <a href="https://kushi1311.github.io/UI-UX/exercise-2/">Exercise 2</a></p>
     <p>4. <a href="https://kushi1311.github.io/UI-UX/exercise-3/">Exercise 3</a></p>
-    
+    <p>5. <a href="https://kushi1311.github.io/UI-UX/exercise-4/">Exercise 4</a></p>
+    <p>6. <a href="https://kushi1311.github.io/UI-UX/exercise-5/">Exercise 5</a></p>
 
     
   </div>
