--- a/index.html
+++ b/index.html
@@ -154,6 +154,7 @@
     <p>4. <a href="https://kushi1311.github.io/UI-UX/exercise-3/">Exercise 3</a></p>
     <p>5. <a href="https://kushi1311.github.io/UI-UX/exercise-4/">Exercise 4</a></p>
     <p>6. <a href="https://kushi1311.github.io/UI-UX/exercise-5/">Exercise 5</a></p>
+     <p>7. <a href="https://kushi1311.github.io/UI-UX/Assignment-2/">Assignment 2</a></p>
 
     
   </div>
