--- a/index.html
+++ b/index.html
@@ -155,6 +155,7 @@
     <p>6. <a href="https://kushi1311.github.io/UI-UX/exercise-4/">Exercise 4</a></p>
     <p>7. <a href="https://kushi1311.github.io/UI-UX/exercise-5/">Exercise 5</a></p>
      <p>8. <a href="https://kushi1311.github.io/UI-UX/Assignment-2/">Assignment 2</a></p>
+    <p>9. <a href="https://kushi1311.github.io/UI-UX/exercise-6/">Exercise 6</a></p>
 
     
   </div>
