--- a/index.html
+++ b/index.html
@@ -156,6 +156,8 @@
     <p>7. <a href="https://kushi1311.github.io/UI-UX/exercise-5/">Exercise 5</a></p>
      <p>8. <a href="https://kushi1311.github.io/UI-UX/Assignment-2/">Assignment 2</a></p>
     <p>9. <a href="https://kushi1311.github.io/UI-UX/exercise-6/">Exercise 6</a></p>
+    <p>10. <a href="https://kushi1311.github.io/UI-UX/Assignment-2-story/">Assignment 2 story webpage</a></p>
+     <p>11. <a href="https://kushi1311.github.io/UI-UX/Assignment-3/">Assignment 3</a></p>
 
     
   </div>
