--- a/index.html
+++ b/index.html
@@ -161,9 +161,10 @@
       <div>
         <p>6. <a href="https://kushi1311.github.io/UI-UX/exercise-4/">Exercise 4</a></p>
         <p>7. <a href="https://kushi1311.github.io/UI-UX/exercise-5/">Exercise 5</a></p>
-        <p>8. <a href="https://kushi1311.github.io/UI-UX/Assignment-2/">Assignment 2</a></p>
-        <p>9. <a href="https://kushi1311.github.io/UI-UX/exercise-6/">Exercise 6</a></p>
-        <p>10. <a href="https://kushi1311.github.io/UI-UX/assignment-3">Assignment 3</a></p>
+        <p>8. <a href="https://kushi1311.github.io/UI-UX/exercise-6/">Exercise 6</a></p>
+        <p>9. <a href="https://kushi1311.github.io/UI-UX/Assignment-2/">Assignment 2</a></p>
+        <p>10. <a href="https://kushi1311.github.io/UI-UX/assignment-2-story/">Assignment-2-story</a></p>
+        <p>11. <a href="https://kushi1311.github.io/UI-UX/assignment-3">Assignment 3</a></p>
       </div>
     </div>
   </div>
