--- a/assignment-3/screen.html
+++ b/assignment-3/screen.html
@@ -706,7 +706,7 @@
 
         setInterval(toggleVisibility, 3000);
       </script>
-      <button onclick="window.location.href='screen1.html'" style="font-size: 24px; padding: 15px 30px; background-color: #28a745; color: white; border: none; cursor: pointer; box-shadow: 0 0 15px #28a745; transition: box-shadow 0.3s ease;"></button>
+      <button onclick="window.location.href='index.html'" style="font-size: 24px; padding: 15px 30px; background-color: #28a745; color: white; border: none; cursor: pointer; box-shadow: 0 0 15px #28a745; transition: box-shadow 0.3s ease;"></button>
         Restart Intake
       </button>
       <style>
